--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -54,7 +54,7 @@ jobs:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-  # Deploy networks
+  # Deploy secrets
   secrets:
     uses: ./.github/workflows/terraform-aws-apply-reusable.yaml
     needs: networks
