--- a/.github/workflows/delete-eks-stationargocd-all.yaml
+++ b/.github/workflows/delete-eks-stationargocd-all.yaml
@@ -96,7 +96,7 @@ jobs:
   # Delete RDS
   delete_rds:
     uses: ./.github/workflows/terraform-aws-destroy-reusable.yaml
-    if: ${{ github.event.inputs.deployMode == 'externe' }}
+    if: ${{ github.event.inputs.deployMode == 'external' }}
     needs: destroy_station
     with:
       environment: ${{ github.event.inputs.environment}}
@@ -109,7 +109,7 @@ jobs:
   # Delete Redis
   delete_redis:
     uses: ./.github/workflows/terraform-aws-destroy-reusable.yaml
-    if: ${{ github.event.inputs.deployMode == 'externe' }}
+    if: ${{ github.event.inputs.deployMode == 'external' }}
     needs: destroy_station
     with:
       environment: ${{ github.event.inputs.environment}}
