--- a/kubernetes/helm/station/templates/stationback-networkpolicy.yaml
+++ b/kubernetes/helm/station/templates/stationback-networkpolicy.yaml
@@ -10,6 +10,7 @@ spec:
 
   policyTypes:
   - Ingress
+  - Egress
   ingress:
 
   # Autorise les IP de l'ALB back
@@ -21,6 +22,16 @@ spec:
     ports:
     - protocol: TCP
       port: 8080
+
+  egress:
+  - to:
+    - ipBlock:
+        cidr: {{ .Values.app.network.vpc_cidr | quote }} 
+      ports:
+      - protocol: TCP
+          port: 3306
+      - protocol: TCP
+          port: 6379
 
      
   # Ouverture Port DNS
