--- a/kubernetes/helm/station/templates/stationback-networkpolicy.yaml
+++ b/kubernetes/helm/station/templates/stationback-networkpolicy.yaml
@@ -23,6 +23,13 @@ spec:
     - protocol: TCP
       port: 8080
 
+  - ports:
+    - protocol: TCP
+      port: 53
+    - protocol: UDP
+      port: 53
+
+
   egress:
   - to:
     - ipBlock:
