--- a/kubernetesaws/helm/station/values.yaml
+++ b/kubernetesaws/helm/station/values.yaml
@@ -13,13 +13,14 @@
 # limitations under the License.
 
 app:
-  # Context path of the repo nexus url
-  repoNexusUrl: ''
 
 
 image:
   tag: 1.0.10
- 
+
+  # Context path of the repo nexus url
+  repoNexusUrl: 'kagzouli'
+
 
 stationredis:
   
