--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -180,8 +180,8 @@ jobs:
   # Configuration ArgoCD
   install_shared_argocd:
     runs-on: ubuntu-latest
-    if: ${{ always() }}
     needs: install_argocd
+    if: ${{ always() && needs.install_argocd.result == 'success' }}
     steps:
       
       - name: Checkout
@@ -246,6 +246,7 @@ jobs:
   configuration_argocd:
     runs-on: ubuntu-latest
     needs: install_shared_argocd
+    if: ${{ always() && needs.install_shared_argocd.result == 'success' }}
     steps:
       
       - name: Checkout
@@ -322,6 +323,7 @@ jobs:
   install_application_argocd:
     runs-on: ubuntu-latest
     needs: configuration_argocd
+    if: ${{ always() && needs.configuration_argocd.result == 'success' }}
     steps:
       
       - name: Checkout
@@ -431,6 +433,7 @@ jobs:
   synchronize_application_argocd:
     runs-on: ubuntu-latest
     needs: install_application_argocd
+    if: ${{ always() && needs.install_application_argocd.result == 'success' }}
     steps:
 
       - name: Configure AWS credentials
