Correction pod affinity

--- a/kubernetesaws/helm/station/templates/stationback-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationback-deployment.yaml
@@ -67,7 +67,9 @@ spec:
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
+          - weight: 100  
+            podAffinityTerm:
+              labelSelector:
                 matchLabels:
                   app: stationback
               topologyKey: kubernetes.io/hostname
