--- a/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
+++ b/kubernetesaws/helm/station/templates/stationfront-deployment.yaml
@@ -41,19 +41,19 @@ spec:
           livenessProbe:
             httpGet:
               scheme: HTTP
-              path: /index.html
+              path: /station-angular4-poc/index.html
               port: 80
-            initialDelaySeconds: 10
-            periodSeconds: 6
-            timeoutSeconds: 8
+            initialDelaySeconds: 8
+            periodSeconds: 5
+            timeoutSeconds: 7
           readinessProbe:
             httpGet:
               scheme: HTTP
-              path: /index.html
+              path: /station-angular4-poc/index.html
               port: 80
-            initialDelaySeconds: 10
-            periodSeconds: 6
-            timeoutSeconds: 8
+            initialDelaySeconds: 8
+            periodSeconds: 5
+            timeoutSeconds: 7
           ports:
           - containerPort: 80
             protocol: TCP
