--- a/.github/workflows/build-repo-stationapplication.yaml
+++ b/.github/workflows/build-repo-stationapplication.yaml
@@ -143,9 +143,7 @@ jobs:
        # Copy stationDemoSecureWeb
       - name: Copy Station Demo web
         id: copy-station-web
-        run: cp /tmp/StationDemoSecureWeb.war .
-        working-directory: current/application/spring-java/StationDemoWeb/docker
-
+        run: cp /tmp/StationDemoSecureWeb.war current/application/spring-java/StationDemoWeb/docker/
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
