--- a/.github/workflows/build-repo-stationapplication.yaml
+++ b/.github/workflows/build-repo-stationapplication.yaml
@@ -130,21 +130,17 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: backendwar
-          path: /tmp/StationDemoSecureWeb.war
+          path: current/application/spring-java/StationDemoWeb/docker/
 
 
       # Debug
       - name: debug-karim
         id: debug-karim
         run: ls -lRt
-        working-directory: /tmp/
+        working-directory: current/application/spring-java/StationDemoWeb/docker/
  
-
-       # Copy stationDemoSecureWeb
-      - name: Copy Station Demo web
-        id: copy-station-web
-        run: cp /tmp/StationDemoSecureWeb.war current/application/spring-java/StationDemoWeb/docker/
-
+ 
+      # Get AWS credentials
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
