--- a/.github/workflows/deploy-eks-stationargocd-all.yaml
+++ b/.github/workflows/deploy-eks-stationargocd-all.yaml
@@ -57,9 +57,9 @@ jobs:
   networks:
     uses: ./.github/workflows/terraform-aws-apply-reusable.yaml
     with:
-      # environment: ${{ env.ENVIRONMENT_NAME}}
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
+      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: networks
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -72,6 +72,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
+      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: secrets
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -84,6 +85,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
+      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: eks
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -97,6 +99,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
+      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: stationdb_rds
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -110,6 +113,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
+      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: stationredis
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -124,6 +128,7 @@ jobs:
     with:
       environment: ${{ github.event.inputs.environment}}
       region: ${{ github.event.inputs.region}}
+      role: ${{ secrets.AWS_ROLE_DEVOPS_CD }}
       component: cloudwatchalarm
     secrets:
       aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
